--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 body {
+  background-color: grey;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -27,27 +28,31 @@ body {
 header {
   height: 120px;
   width: 100%;
-  background: #eee;
+  /* background: #eee; */
   display: flex;
   flex-direction: row;
   color: #333;
 }
 
 .nav-button {
+  cursor: pointer;
   position: absolute;
   top: 130px;
   font-size: 40px;
 }
 
+.close {
+  cursor: pointer;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
-
 }
 
 .nav-links {
   font-size: 20px;
-  background-color: grey;
+  /* background-color: grey; */
 }
 
 .center {
@@ -77,7 +82,6 @@ nav {
   opacity: 0.8;
 }
 
-
 #modal-btn-id {
   background: white;
   color: black;
@@ -87,11 +91,11 @@ nav {
 
 #modal-content {
   position: absolute;
-  align-self: center;
+  top: 40%;
+  left: 15%;
   border-radius: 4px;
   box-shadow: 6px 6px 12px 7px;
   background: #fff;
-  display: none;
   padding: 40px;
   z-index: 200;
 }
